--- a/client/src/Login/Login.css
+++ b/client/src/Login/Login.css
@@ -1,5 +1,5 @@
 .login-Main {
-  background-image: url("../../../img/waveUp.svg");
+  background-image: url("../../img/waveUp.svg");
   /* url("../../../img/waveUp.svg"); wave1 bottom, no-repeat,*/
   background-position: top;
   background-repeat: no-repeat;
